1.3.29
Fixed: Blight fires being too dark

1.3.28
Partial config code rewrite. Shouldn't change anything, but let me know if anything seems broken.
Added: Configs to restrict bonus regen by player health. For example, you could set players to only regen up to a certain number of hearts. Or not regen below a certain number if you're feeling evil.
Fixed: Blight death messages being broken (does not completely translate however, working on it)
Fixed: Blight fires spawning infinitely in some cases

1.3.27
Update difficulty meter textures (Z-Tunic)
Added: Config to change absorption heart style. Options are SHIELD, GOLD_OUTLINE, and VANILLA (#115)
Fixed: Hearts and absorption hearts rendering incorrectly in hardcore mode (#132)
Fixed: Sleep warning never showing

1.3.26
Updated heart textures (Z-Tunic)

1.3.25
Changed: The way hearts render when poisoned/withered
Fixed: Some items missing models (#128)
Fixed: Last heart outline missing or in wrong position (#129)
Fixed: Some issues with localizations

1.3.24
Updated es_VE.lang (Allinxter_910)
Added: pt_BR.lang (Diego Ramos)
Added: Config to disable vanilla hearts row and use only custom hearts (#123)
Added: Entity properties for loot tables, scalinghealth:is_blight and scalinghealth:difficulty. See wiki for details (#106)
Added: Config to control blight difficulty multiplier (finally)
Changed: Cap on regen food values removed (#125)

1.3.23
Changed: XP health bonuses can now be used with heart containers (#119)
Changed: Tweaked absorption display textures (#115)
Fixed: Armor bar being too high up when you have more than one row of absorption (#115)

1.3.22
More work on absorption overlay (#115)
Added: Config to set player max health based on their XP level (#119)

1.3.21
Added: Config to set difficulty level with Game Stages. You can set a specific difficulty level for any number of stages, and the largest is chosen. Overrides any other changes to difficulty.
Added: Absorption override, WIP (#115)