@@ -1,4 +1,5 @@
 1.3.29
+Added: Configs to tweak health text position (#133)
 Fixed: Blight fires being too dark
 
 1.3.28
